# windows-IPC-client-server

./: .gitignore  CMakeLists.txt  LICENSE  README.md  argparser.hpp  client.cpp  client.hpp  event.hpp  server.cpp  server.hpp  shared.hpp  streamable.hpp  streamablefloat.hpp  streamableinteger.hpp  streamableobject.cpp  streamableobject.hpp  streamablestring.hpp  streamablevector.hpp
fmt/: format.cc
fmt/include/: core.h  format-inl.h
